# select-partial-text-from-dropdown

./: README.md  partial_text_dropdown_match.py  pyproject.toml
