[tool.poetry]
name = "select-partial-text-from-dropdown"
version = "0.1.0"
description = ""
authors = ["morgan-young <me@morgan-young.co.uk>"]

[tool.poetry.dependencies]
python = "3.9.*"
selenium = "4.5.0"
webdriver-manager = "^3.8.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
